--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-(C) 2006-2011 Gabriel Dibble <gdibble@gmail.com> - (CC) BY-SA (US 3.0)
+(C) 2006-2011 Gabriel Dibble <gdibble@gmail.com> + (CC) BY-SA (US 3.0)   | READMEv02
 ====================================================================================
 https://github.com/gdibble/google.Enhanced.BLACK is a free software project by
 Ripple FX (also known as RippleFxInc.com >>> http://userscripts.org/users/24894)
@@ -9,9 +9,10 @@ Ripple FX (also known as RippleFxInc.com >>> http://userscripts.org/users/24894)
 
 ^^^^^^^^^^^^^^^^^^^^^
 google.Enhanced.BLACK
-  This Google page-enhancer turns all Google service pages BLACK---an inverted
+
+ "This Google page-enhancer turns all Google service pages BLACK---an inverted
   color-scheme for reduced eye fatigue. It improves page layout and readability
-  by widening search results and optionally removes clutter.
+  by widening search results and optionally removes clutter."
 
     This free software project is a *ripple effect* of love,
     _dedicated to all its users_
@@ -22,6 +23,20 @@ Please visit the Script Homepage for a full list of supported services/pages:
 Feel free to leave ideas, criticism or ask for help in the Discussion forum:
   >> http://userscripts.org/scripts/discuss/12917
     Or via email (find in script-sources); THANKS :)
+
+
+.:.
+
+Along with the Offial Script Source (12917.user.js), you will find the Logo:
+  (As the script source code, so are these images (CC) BY-NC-SA (US 3.0)
+ *Press Photos
+  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+  google.Enhanced.BLACK.Logo-v1.0.xcf [GIMP] -full res. [OPEN]source
+  google.Enhanced.BLACK.Logo-v1.0.jpeg       -full res. JPEG output (BR-brdr)
+ *google.Enhanced.BLACK.Logo-v1.0.bgW.jpeg   -full res. JPEG output (WhiteBG) 
+ *google.Enhanced.BLACK.Logo-v1.0.bgB.jpeg   -full res. JPEG output (BlackBG)
+  google.Enhanced.BLACK.Logo-v1.0.48x48.xcf  -icon size [OPEN]source
+
 
 
 
