--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-(C) 2006-2011 Gabriel Dibble <gdibble@gmail.com> + (CC) BY-SA (US 3.0)   | READMEv02
+(C) 2006-2011 Gabriel Dibble <gdibble@gmail.com> + (CC) BY-SA (US 3.0)    | READMEv3
 ====================================================================================
 https://github.com/gdibble/google.Enhanced.BLACK is a free software project by
 Ripple FX (also known as RippleFxInc.com >>> http://userscripts.org/users/24894)
@@ -28,8 +28,8 @@ Feel free to leave ideas, criticism or ask for help in the Discussion forum:
 .:.
 
 Along with the Offial Script Source (12917.user.js), you will find the Logo:
-  (As the script source code, so are these images (CC) BY-NC-SA (US 3.0)
- *Press Photos
+  [As the script source code, so are these images (CC) BY-NC-SA (US 3.0)]
+ *:Press Photos
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   google.Enhanced.BLACK.Logo-v1.0.xcf [GIMP] -full res. [OPEN]source
   google.Enhanced.BLACK.Logo-v1.0.jpeg       -full res. JPEG output (BR-brdr)
