--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-(C) 2006-2011 Gabriel Dibble <gdibble@gmail.com> + (CC) BY-SA (US 3.0)    | READMEv4
+(C) 2006-2011 Gabriel Dibble <gdibble@gmail.com> + (CC) BY-SA (US 3.0)    | READMEv5
 ====================================================================================
 https://github.com/gdibble/google.Enhanced.BLACK is a free software project by
 Ripple FX (also known as RippleFxInc.com >>> http://userscripts.org/users/24894)
@@ -35,7 +35,7 @@ Along with the Offial Script Source (12917.user.js), you will find the Logo:
  *google.Enhanced.BLACK.Logo-v1.0.bgB.jpeg   -full res. JPEG output (BlackBG)
   google.Enhanced.BLACK.Logo-v1.0.xcf [GIMP] -full res. [OPEN]source
   google.Enhanced.BLACK.Logo-v1.0.48x48.xcf  -icon size [OPEN]source
-
+  google.Enhanced.BLACK.Logo-v1.0.48x48.png  -icon size PNG output
 
 
 
