--- a/README
+++ b/README
@@ -1,7 +1,7 @@
-(C) 2006-2011 Gabriel Dibble <gdibble@gmail.com> + (CC) BY-SA (US 3.0) | READMEv7
+(C) 2006-2011 Gabriel Dibble <gdibble@gmail.com> + (CC) BY-SA (US 3.0) | READMEv8
 =================================================================================
 https://github.com/gdibble/google.Enhanced.BLACK is a free software project by
-Ripple FX (also known as RippleFxInc.com >>> http://userscripts.org/users/24894)
+Ripple FX  (RippleFxInc.com >>> http://userscripts.org/users/24894)
 
   The userscript uploaded here has been released for public general use under
   a Creative Commons Attribution-Noncommercial-Share Alike 3.0 U.S. License.
@@ -10,19 +10,20 @@ Ripple FX (also known as RippleFxInc.com >>> http://userscripts.org/users/24894)
 ^^^^^^^^^^^^^^^^^^^^^
 google.Enhanced.BLACK
 
- "This Google page-enhancer turns all Google service pages BLACK---an inverted
-  color-scheme for reduced eye fatigue. It improves page layout and readability
-  by widening search results and optionally removes clutter."
+  This Google page-enhancer turns all Google service pages BLACK---
+    an inverted color-scheme for reduced eye fatigue. It improves page layout
+      and readability by widening search results and optionally removes clutter.
 
-    This free software project is a *ripple effect* of love,
-    _dedicated to all its users_
+        This free software project is a *ripple effect* of love,
+          _dedicated to all its users_
+
 
 Please visit the Script Homepage for a full list of supported services/pages:
 >> http://s.ripplefxinc.com/BlackGoogle
 
 Feel free to leave ideas, criticism or ask for help in the Discussion forum:
-  >> http://userscripts.org/scripts/discuss/12917
-    Or via email (find in script-sources); THANKS :)
+>> http://userscripts.org/scripts/discuss/12917
+   or via email (find in script-sources); THANKS :)
 
 
 .:.
@@ -39,7 +40,8 @@ Along with the Offial Script Source (12917.user.js), you will find the Logo:
 
 
 
-###
+
+##
 Coded using Linux tool set
 Logo graphic designed with GNU Image Manipulation Program
 
@@ -50,5 +52,4 @@ Logo graphic designed with GNU Image Manipulation Program
 
 
 Much respect: to userscripts.org, the development teams of all the browsers
-and add-ons noted on script homepage        &&Google for supporting Liberty
-###
+and add-ons noted on script homepage        & Google for supporting Liberty
