--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-(C) 2006-2011 Gabriel Dibble <gdibble@gmail.com> + (CC) BY-SA (US 3.0) | READMEv8
-=================================================================================
+(C) 2006-2011 Gabriel Dibble <gdibble@gmail.com> + (CC) BY-SA (US 3.0) | READMEv9
+#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#=#
 https://github.com/gdibble/google.Enhanced.BLACK is a free software project by
 Ripple FX  (RippleFxInc.com >>> http://userscripts.org/users/24894)
 
@@ -28,8 +28,8 @@ Feel free to leave ideas, criticism or ask for help in the Discussion forum:
 
 .:.
 
-Along with the Offial Script Source (12917.user.js), you will find the Logo:
-  [As the script source code, so are these images (CC) BY-NC-SA (US 3.0)]
+Along with the official source code (12917.user.js), you will find the Logo:
+  [As the script is licensed, so are these images (CC) BY-NC-SA (US 3.0)]
  *:Press Photos
   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  *google.Enhanced.BLACK.Logo-v1.0.bgW.jpeg   -full res. JPEG output (WhiteBG) 
@@ -41,7 +41,7 @@ Along with the Offial Script Source (12917.user.js), you will find the Logo:
 
 
 
-##
+#=#=#
 Coded using Linux tool set
 Logo graphic designed with GNU Image Manipulation Program
 
